chore(): add spotlees mvn plugin to pre-commit and format all files (#61)
* chore(): add spotlees mvn plugin to pre-commit and format all files